<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ComboDialog</class>
 <widget class="QDialog" name="ComboDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>679</width>
    <height>434</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string notr="true">#Dialog</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout" stretch="1,0">
   <item>
    <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0,0,1">
     <item row="1" column="1">
      <layout class="QHBoxLayout" name="horizontalLayout">
       <property name="spacing">
        <number>9</number>
       </property>
       <item>
        <widget class="GroupComboBox" name="comboGroup">
         <property name="sizeAdjustPolicy">
          <enum>QComboBox::AdjustToContents</enum>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="buttonNewGroup">
         <property name="text">
          <string>&amp;New</string>
         </property>
        </widget>
       </item>
       <item>
        <spacer name="horizontalSpacer_2">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>40</width>
           <height>20</height>
          </size>
         </property>
        </spacer>
       </item>
       <item>
        <widget class="QLabel" name="labelMatching">
         <property name="text">
          <string>Matching</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QComboBox" name="comboMatching">
         <property name="sizeAdjustPolicy">
          <enum>QComboBox::AdjustToContents</enum>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item row="0" column="1">
      <widget class="QLineEdit" name="editName"/>
     </item>
     <item row="0" column="0">
      <widget class="QLabel" name="labelName">
       <property name="text">
        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;Name&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="labelGroup">
       <property name="text">
        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:11pt; color:#258fc0; vertical-align:super;&quot;&gt;● &lt;/span&gt;Group&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
       </property>
      </widget>
     </item>
     <item row="2" column="0">
      <widget class="QLabel" name="labelKeyword">
       <property name="text">
        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;Keyword&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
     </item>
     <item row="3" column="0" rowspan="2">
      <widget class="QLabel" name="labelSnippet">
       <property name="styleSheet">
        <string notr="true">padding-top: 40px</string>
       </property>
       <property name="text">
        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;&lt;span style=&quot; font-size:11pt; color:#258fc0; vertical-align:super;&quot;&gt;● &lt;/span&gt;Snippet&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
       </property>
      </widget>
     </item>
     <item row="3" column="1" rowspan="2">
      <widget class="ComboEditor" name="comboEditor" native="true">
       <property name="focusPolicy">
        <enum>Qt::StrongFocus</enum>
       </property>
      </widget>
     </item>
     <item row="2" column="1">
      <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="1,0,0">
       <property name="spacing">
        <number>9</number>
       </property>
       <item>
        <widget class="QLineEdit" name="editKeyword"/>
       </item>
       <item>
        <widget class="QLabel" name="labelCaseSensitivity">
         <property name="text">
          <string>Case sensitivity</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QComboBox" name="comboCaseSensitivity"/>
       </item>
      </layout>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QHBoxLayout" name="spacer_2">
     <property name="spacing">
      <number>6</number>
     </property>
     <property name="leftMargin">
      <number>0</number>
     </property>
     <property name="topMargin">
      <number>0</number>
     </property>
     <property name="rightMargin">
      <number>0</number>
     </property>
     <property name="bottomMargin">
      <number>0</number>
     </property>
     <item>
      <widget class="QLabel" name="labelRequiredFields">
       <property name="text">
        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:11pt; color:#258fc0; vertical-align:super;&quot;&gt;● &lt;/span&gt;Required fields&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
     </item>
     <item>
      <spacer name="spacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>131</width>
         <height>5</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="buttonOk">
       <property name="text">
        <string>&amp;OK</string>
       </property>
       <property name="default">
        <bool>true</bool>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="buttonCancel">
       <property name="text">
        <string>&amp;Cancel</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>GroupComboBox</class>
   <extends>QComboBox</extends>
   <header>Group/GroupComboBox.h</header>
  </customwidget>
  <customwidget>
   <class>ComboEditor</class>
   <extends>QWidget</extends>
   <header>ComboEditor.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <tabstops>
  <tabstop>editName</tabstop>
  <tabstop>comboGroup</tabstop>
  <tabstop>buttonNewGroup</tabstop>
  <tabstop>comboMatching</tabstop>
  <tabstop>comboEditor</tabstop>
  <tabstop>buttonOk</tabstop>
  <tabstop>buttonCancel</tabstop>
 </tabstops>
 <resources/>
 <connections>
  <connection>
   <sender>buttonCancel</sender>
   <signal>clicked()</signal>
   <receiver>ComboDialog</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>594</x>
     <y>359</y>
    </hint>
    <hint type="destinationlabel">
     <x>179</x>
     <y>282</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>editKeyword</sender>
   <signal>textChanged(QString)</signal>
   <receiver>ComboDialog</receiver>
   <slot>updateGui()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>364</x>
     <y>83</y>
    </hint>
    <hint type="destinationlabel">
     <x>280</x>
     <y>183</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>comboGroup</sender>
   <signal>currentIndexChanged(int)</signal>
   <receiver>ComboDialog</receiver>
   <slot>updateGui()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>107</x>
     <y>40</y>
    </hint>
    <hint type="destinationlabel">
     <x>551</x>
     <y>45</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonNewGroup</sender>
   <signal>clicked()</signal>
   <receiver>ComboDialog</receiver>
   <slot>onActionNewGroup()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>182</x>
     <y>48</y>
    </hint>
    <hint type="destinationlabel">
     <x>280</x>
     <y>182</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonOk</sender>
   <signal>clicked()</signal>
   <receiver>ComboDialog</receiver>
   <slot>onActionOk()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>513</x>
     <y>359</y>
    </hint>
    <hint type="destinationlabel">
     <x>280</x>
     <y>182</y>
    </hint>
   </hints>
  </connection>
 </connections>
 <slots>
  <slot>onActionOk()</slot>
  <slot>updateGui()</slot>
  <slot>onActionNewGroup()</slot>
  <slot>onUseHtmlChanged()</slot>
 </slots>
</ui>
